# ceia-reinforcement-learning-i

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/notebooks/: clase_3b_robot_pasillo_01.ipynb  clase_3c_barco_en_oceano.ipynb  dqn_con_tn_rb_03.ipynb  dqn_vs_double_dqn_02.ipynb  dueling_dqn_01.ipynb  robot_repositor_01.ipynb
src/scripts/: robot_repositor_01.py
src/scripts/actor-crtic/: actor_critic_onestep_bipedalwalker_01.py
src/scripts/barco_en_oceano_estocastico/: README.md  README.me  barco_en_oceano_estocastico.py
src/scripts/dqn_intestable/: README.md  dqn_inestable_sin_replay_buffer_sin_target_network_01.py
src/scripts/monte_carlo_ES_control/: README.md  monte_carlo_es_control_01.py  monte_carlo_es_simple_politica_optima_01.py
src/scripts/monte_carlo_cada_visita/: README.md  every_visit_monte_carlo_algorithm_01.py
src/scripts/monte_carlo_off_policy_IS_ponderado/: README.md  monte_carlo_off_policy_epsilon_greedy_is_ponderado_01.py
src/scripts/monte_carlo_on_policy_epsilon_greedy/: README.md  monte_carlo_on_policy_epsilon_greedy_01.py
src/scripts/monte_carlo_primera_visita/: README.md  first_visit_monte_carlo_algorithm_01.py
src/scripts/q_learning_01/: q_learning_gridworld_5x5_04.py
src/scripts/q_learning_frozenlake/: README.md  q_learning_frozenlake_01.py
src/scripts/q_learning_golf_buggy/: README.MD  golf_buggy_v0_0_3.py
src/scripts/q_learning_gridworld_02/: README.md  q_learning_gridworld_5x5_02.py  q_learning_gridworld_5x5_03.py
src/scripts/q_learning_vs_sarsa_cliff_walking/: README.md  (+1 more)
(+4 files in other folders)
